kubernetes/apps/ingress-nginx/ingress-nginx-extras/app/ingress-bb-cloudflare-tunnel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bb-cloudflare-tunnel
  namespace: ingress-nginx
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: bb.${BASE_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 80
        path: /
        pathType: Prefix
